--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 波兰-157.4KB/s(Youtube:不良林), server: 217.30.10.67, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇨🇳 中国-923.2KB/s(Youtube:不良林), server: 120.233.150.146, port: 65082, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
-  - {name: 🇭🇰 香港-1.23MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 6004, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.07MB/s(Youtube:不良林), server: 116.129.254.177, port: 65075, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-2.53MB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-638.2KB/s(Youtube:不良林), server: 111.45.22.136, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
+  - {name: 🇨🇳 中国-3.50MB/s(Youtube:不良林), server: 36.134.156.5, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 中国-2.57MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-6.16MB/s(Youtube:不良林), server: 36.134.156.5, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
   - {name: 🇯🇵 日本-458.8KB/s(Youtube:不良林), server: 194.156.231.248, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-607.3KB/s(Youtube:不良林), server: 194.156.231.253, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-2.03MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-157.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-923.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-638.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-458.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 波兰-157.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-923.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-638.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-458.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 波兰-157.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-923.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-638.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-458.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
@@ -66,18 +66,17 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.23MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 波兰-157.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-923.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-638.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-458.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
@@ -88,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 波兰-157.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-923.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-638.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-458.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
@@ -104,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-157.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-923.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-638.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-458.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
@@ -129,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 波兰-157.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-923.2KB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.23MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.07MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇨🇳 中国-638.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
       - 🇯🇵 日本-458.8KB/s(Youtube:不良林)
       - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
