--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-638.2KB/s(Youtube:不良林), server: 111.45.22.136, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 111.45.22.136}}
-  - {name: 🇨🇳 中国-3.50MB/s(Youtube:不良林), server: 36.134.156.5, port: 65063, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-2.57MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.62MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-6.16MB/s(Youtube:不良林), server: 36.134.156.5, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇯🇵 日本-458.8KB/s(Youtube:不良林), server: 194.156.231.248, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇬🇧 英国-628.6KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇸🇬 新加坡-685.0KB/s(Youtube:不良林), server: sg-02.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: sg-02.licom.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-4.05MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 6004, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-2.28MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.05MB/s(Youtube:不良林), server: bai-piao-wang-zhe.us.567568.ml, port: 19568, type: trojan, password: AglrNchEnS, sni: bai-piao-wang-zhe.us.567568.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-3.52MB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65027, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
   - {name: 🇯🇵 日本-607.3KB/s(Youtube:不良林), server: 194.156.231.253, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-2.03MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇯🇵 日本-1.62MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-638.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-458.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-628.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-685.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-638.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-458.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-628.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-685.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-638.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-458.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-628.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-685.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
@@ -66,18 +66,20 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.28MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-638.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-458.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-628.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-685.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
@@ -87,12 +89,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-638.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-458.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-628.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-685.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
@@ -103,12 +105,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-638.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-458.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-628.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-685.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
@@ -128,12 +130,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-638.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.50MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.57MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.62MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.16MB/s(Youtube:不良林)
-      - 🇯🇵 日本-458.8KB/s(Youtube:不良林)
+      - 🇬🇧 英国-628.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-685.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.05MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.28MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
       - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
