--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.44MB/s(Youtube:不良林), server: 36.134.156.5, port: 65079, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇨🇳 中国-1.31MB/s(Youtube:不良林), server: 36.134.154.119, port: 65072, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
-  - {name: 🇨🇦 加拿大-560.9KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-2.14MB/s(Youtube:不良林), server: 116.129.254.177, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-417.6KB/s(Youtube:不良林), server: 120.233.150.146, port: 65001, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-4.38MB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65023, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-631.1KB/s(Youtube:不良林), server: 120.233.150.146, port: 65066, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
+  - {name: 🇨🇳 中国-1.09MB/s(Youtube:不良林), server: 120.233.29.189, port: 65071, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.29.189}}
+  - {name: 🇨🇦 加拿大-362.9KB/s(Youtube:不良林), server: 161.129.60.17, port: 25634, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.61MB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-5.87MB/s(Youtube:不良林), server: 36.134.154.119, port: 65082, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.154.119}}
   - {name: 🇨🇳 中国-2.06MB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65083, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
   - {name: 🇨🇳 中国-3.52MB/s(Youtube:不良林), server: cn03.downloadmovie.cn, port: 65027, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn03.downloadmovie.cn}}
-  - {name: 🇯🇵 日本-607.3KB/s(Youtube:不良林), server: 194.156.231.253, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-2.03MB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇯🇵 日本-1.62MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-560.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-631.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-362.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-560.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-631.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-362.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-560.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-631.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-362.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-560.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-631.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-362.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-560.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-631.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-362.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-560.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-631.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-362.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.31MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-560.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-417.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-631.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-362.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.61MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.87MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.52MB/s(Youtube:不良林)
-      - 🇯🇵 日本-607.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-2.03MB/s(Youtube:不良林)
       - 🇯🇵 日本-1.62MB/s(Youtube:不良林)
 rules:
